Adding a new migration (user)
